--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/ssr": "^17.0.1",
     "@netlify-builder/deploy": "^5.0.0",
     "express": "^4.18.2",
+    "firebase": "^10.6.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
