--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "sj-demo",
   "version": "0.0.0",
   "scripts": {
-    "ng": "../sjdemo/sj-demo/node_modules/.bin/ng",
-    "start": "../sjdemo/sj-demo/node_modules/.bin/ng serve",
-    "build": "../sjdemo/sj-demo/node_modules/.bin/ng build",
-    "watch": "../sjdemo/sj-demo/node_modules/.bin/ng build --watch --configuration development",
-    "test": "../sjdemo/sj-demo/node_modules/.bin/ng test",
+    "ng": "../sj-demo/node_modules/.bin/ng",
+    "start": "../sj-demo/node_modules/.bin/ng serve",
+    "build": "../sj-demo/node_modules/.bin/ng build",
+    "watch": "../sj-demo/node_modules/.bin/ng build --watch --configuration development",
+    "test": "../sj-demo/node_modules/.bin/ng test",
     "serve:ssr:sj-demo": "node dist/sj-demo/server/server.mjs"
   },
   "private": true,
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "firebase": "^10.6.0",
     "rxjs": "~7.8.0",
+    "super-jss": "file:super-jss-1.0.32.tgz",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
