--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "express": "^4.18.2",
     "firebase": "^10.6.0",
     "rxjs": "~7.8.0",
-    "super-jss": "file:super-jss-1.0.32.tgz",
+    "sj-demo": "^0.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
